@startuml

package BusinessLogic {

     interface IMeasurementObserver
}

package Device {
    interface IStorage {
        +void init()
        +void deinit()
        +void write()
        -void serialize()
    }
/'
   note right of WifiStorage
    ESP8266MOD has only Wifi support.
    In future it would be possible 
    to use ESP32 that has also Bloototh.
    end note
'/
    class WifiStorage {
        -login
        -password
    }

    class SDCardStorage {
        -fileName
    }

    class UARTStorage {
    }
}

package Driver {
    class SDCardDriver {
        -void mountFileSystem()
        -void unmountFileSystem()
        -void openFile()
        -void closeFile()
        -void sync()
        -void writeToFile()

        - fileSystemHandler
        - logFileHandler
    }

    class WifiDriver {
        -void connect()
        -void disconnect()
    }

    class UARTDriver {

    }

    interface IUARTDriver {
        +void open()
        +void close()
        +void read()
        +void write()
    }
}


IMeasurementObserver <|--- SDCardStorage
IMeasurementObserver <|-- UARTStorage
IMeasurementObserver <|-- WifiStorage

IStorage <|-- WifiStorage
IStorage <|-- SDCardStorage
IStorage <|-- UARTStorage

SDCardStorage *-- SDCardDriver
WifiStorage *-- WifiDriver

UARTStorage -- IUARTDriver
WifiDriver -- IUARTDriver
IUARTDriver <|-- UARTDriver


@enduml